ui: fix scrollbar for search box

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,7 @@
   grid-template-rows: min-content 1fr min-content;
   grid-template-columns: 1fr;
   grid-template-areas: "header" "main" "footer";
-  min-height: 100dvh;
+  height: 100dvh;
   width: 100%;
   gap: 1rem;
 
@@ -57,6 +57,7 @@
 
   #main {
     grid-area: main;
+    overflow: hidden;
   }
 
   footer {
